dataset1235/2025-2/2947369575/users/2975895382/executions/1003782500_1626817775.log
== RUN (2025-08-25 23:32:13)
-- CODE: 
import math

# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input("Valor do raio: "))

area = math.pi * raio**2
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Valor do raio: 0.031415926535897934
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Valor do raio: 63.61725123519331
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Valor do raio: 478.3879062809779
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Valor do raio: 380.132711084365
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Valor do raio: 14246.10355137289
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Valor do raio: 12.566370614359172
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:32:03)
-- CODE: 
import math

# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input("Valor do raio: "))

area = math.pi * r**2
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area = math.pi * r**2
                     ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area = math.pi * r**2
                     ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area = math.pi * r**2
                     ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area = math.pi * r**2
                     ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area = math.pi * r**2
                     ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area = math.pi * r**2
                     ^
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:33:24)
-- CODE: 
import math

# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input("Valor do raio: "))

area = math.pi * raio**2
volume = (4/3) * math.pi * raio**3

print(round(area,3))
print(round(volume,3))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:31:50)
-- CODE: 
import math

# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

raio = float(input("Valor do raio: "))

area = math.pi * r²
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 9
    area = math.pi * r²
                      ^
SyntaxError: invalid character '²' (U+00B2)
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 9
    area = math.pi * r²
                      ^
SyntaxError: invalid character '²' (U+00B2)
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 9
    area = math.pi * r²
                      ^
SyntaxError: invalid character '²' (U+00B2)
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 9
    area = math.pi * r²
                      ^
SyntaxError: invalid character '²' (U+00B2)
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 9
    area = math.pi * r²
                      ^
SyntaxError: invalid character '²' (U+00B2)
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 9
    area = math.pi * r²
                      ^
SyntaxError: invalid character '²' (U+00B2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
